<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">T61Radio</string>
    <string name="app_settings">T61Radio Settings</string>
    <string name="menu_play">Play</string>
    <string name="menu_prev">Previous</string>
    <string name="menu_next">Next</string>
    <string name="menu_settings">Settings</string>
    <string name="thesixtyone">http://www.thesixtyone.com</string>
    <string name="show_this_next_time">Show this next time</string>
    <string name="confirm_exit">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pref_key_show_alert">showAlert</string>
    <string name="pref_key_alert_exit">alertExit</string>
    <string name="pref_header_battery_data_usage">Data Usage</string>
    <string name="pref_header_alert_dialogs">Alert Dialogs</string>
    <string name="pref_title_show_alert">Enable alert dialogs</string>
    <string name="pref_summary_on_show_alert">Uncheck to disable alert dialogs</string>
    <string name="pref_summary_off_show_alert">Check to enable alert dialogs</string>
    <string name="pref_title_alert_exit">Exiting application</string>
    <string name="pref_summary_on_alert_exit">Uncheck to disable exit alert dialog</string>
    <string name="pref_summary_off_alert_exit">Check to enable exit alert dialog</string>
    <string name="ok">Ok</string>
    <string name="quit">Quit</string>
    <string name="confirm_using_data">This application will use your network data</string>
    <string name="pref_key_alert_data">alertData</string>
    <string name="pref_title_alert_data">Mobile network</string>
    <string name="pref_summary_on_alert_data">Uncheck to start this application without getting mobile network alert</string>
    <string name="pref_summary_off_alert_data">Check to get mobile network alert each time starting this application</string>
</resources>