<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        >
    <PreferenceScreen
            android:title="@string/pref_header_battery_data_usage">
        <CheckBoxPreference
                android:title="Coming soon.." 
                />
    </PreferenceScreen>
    <PreferenceScreen
            android:title="@string/pref_header_alert_dialogs">
        <CheckBoxPreference
                android:key="@string/pref_key_show_alert"
                android:title="@string/pref_title_show_alert"
                android:summaryOn="@string/pref_summary_on_show_alert"
                android:summaryOff="@string/pref_summary_off_show_alert"
                android:defaultValue="true"
                />
        <PreferenceCategory 
            android:title="Dialogs">
            <CheckBoxPreference
                android:key="@string/pref_key_alert_data"
                android:title="@string/pref_title_alert_data"
                android:summaryOn="@string/pref_summary_on_alert_data"
                android:summaryOff="@string/pref_summary_off_alert_data"
                android:dependency="@string/pref_key_show_alert"
                android:defaultValue="true"
                />
            <CheckBoxPreference
                android:key="@string/pref_key_alert_exit"
                android:title="@string/pref_title_alert_exit"
                android:summaryOn="@string/pref_summary_on_alert_exit"
                android:summaryOff="@string/pref_summary_off_alert_exit"
                android:dependency="@string/pref_key_show_alert"
                android:defaultValue="true"
                />
        </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen
            android:title="Report a bug">
        <intent android:action="android.intent.action.VIEW"
                android:data="https://github.com/izambasiron/T61-Android/issues" />
    </PreferenceScreen>
</PreferenceScreen>
